# cherry

./: Prelude.ch  Prelude.js  README.md  Test.ch  cherry-mode.el  cherry.cabal  cherry.vim
demo/: MyMod.ch  MyMod.js  Prelude.ch  Prelude.js  Test.ch  package.json
demo/Js/: Prelude.js
demo/Sub/: Mod.ch  Mod.js
src/: Dependency.hs  Error.hs  Main.hs  Parse.hs  Syntax.hs  Type.hs  Typecheck.hs  Utils.hs
src/Codegen/: Javascript.hs
src/Codegen/Javascript/: Codegen.hs  Merge.hs  Pretty.hs  Rename.hs  Syntax.hs  Transform.hs
src/Import/: Common.hs
src/Parse/: Declaration.hs  Expression.hs  Lexer.hs  Module.hs  Parse.hs  Type.hs
src/Syntax/: Declaration.hs  Expression.hs  Module.hs  Position.hs
src/Typecheck/: Constraint.hs  Environment.hs  Error.hs  Infer.hs  Inference.hs  Solve.hs
