name:                cherry
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cherry#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cherry
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       megaparsec >= 5.2.0,
                       containers >= 0.5.7,
                       text >= 1.2.2,
                       mtl >= 2.2.1,
                       pretty >= 1.1.3
